--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,42 +1,30 @@
-name: CI Build and Push to Docker Hub
+name: Continuous Integration (CI)
 
 on:
   push:
     branches: [main]
-  workflow_dispatch:
 
 jobs:
-  build-and-push:
+  ci-build-test-push:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-    - name: Run Unit Tests
-      run: |
-        pytest tests/
+      - name: Build and push Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/mlops_assessment:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/mlops_assessment:latest
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Install Python dependencies
+        run: pip install -r requirements.txt
 
-    - name: Build Docker image
-      run: |
-        docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/salary-api:latest .
-
-    - name: Push Docker image
-      run: |
-        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/salary-api:latest
+      - name: Run unit tests
+        run: pytest tests/
