--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,9 @@ jobs:
           pip install pytest
 
       - name: Run unit tests
-        run: pytest tests/
+        run: |
+          export PYTHONPATH=.
+          pytest tests/
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
