--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,20 +1,27 @@
-name: Continuous Deployment (CD)
+name: Continuous Deployment to Docker Swarm
 
 on:
   workflow_dispatch:
 
 jobs:
-  deploy-to-swarm:
-    runs-on: ubuntu-latest
+  deploy:
+    runs-on: self-hosted
 
     steps:
-      - name: SSH and Deploy to Docker Swarm
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.SWARM_MANAGER_IP }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-            docker pull ${{ secrets.DOCKER_USERNAME }}/mlops_assessment:latest
-            docker stack deploy -c /home/${{ secrets.SSH_USER }}/Mlops_Assesment_l00188628/stack.yaml mlops-app
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    - name: Build Docker image
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/mlops_assessment:latest .
+
+    - name: Push Docker image
+      run: |
+        docker push ${{ secrets.DOCKER_USERNAME }}/mlops_assessment:latest
+
+    - name: Deploy to Docker Swarm
+      run: |
+        docker stack deploy -c stack.yaml mlops-app
