--- a/.github/workflows/ct.yaml
+++ b/.github/workflows/ct.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   check-drift:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     outputs:
       drift: ${{ steps.set-output.outputs.drift }}
 
@@ -15,16 +15,20 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.10'  
+          
+      - name: Install Dependencies
+        run: |
+          pip install -r requirements.txt
+          pip install pandas numpy
 
       - name: Run Drift Monitor
-        run: |
-          python monitor_drift.py
+        run: python monitor_drift.py
 
-      - name: Check for Drift Trigger File
+      - name: Set Drift Output
         id: set-output
         run: |
           if [ -f drift_detected.txt ]; then
